@@ -1,3 +1,14 @@
+Mon Dec 29 15:27:03 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 185. Lots of new tests.
+	After this patchset, the new mbfw1 test case fails.
+
+	* ChangeLog, Makefile.am, Maketests,
+	funlen.awk, funlen.in, funlen.ok,
+	mbfw1.awk, mbfw1.in, mbfw1.ok,
+	mbprintf1.awk, mbprintf1.in, mbprintf1.ok,
+	mbprintf2.awk, mbprintf2.ok
+
 Mon Dec 24 02:20:08 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
 
 	* convspcl.awk: Add a final message indicating whether xgawk's behavior
