@@ -1,0 +1,2 @@
+array: 7
+array_A: 7
