@@ -1,0 +1,4 @@
+CDRegion              Commune             Site
+SEVästsverige         Hallands län        Kungsbacka
+SESmåland med öarna   Västra Götalands länGöteborg
+SEKronoberg           Alvesta             Stenungsund
