@@ -1,0 +1,1 @@
+{ printf "%-7s|\n", $0 }
