@@ -1,0 +1,4 @@
+BEGIN {
+	printf "%c\n",  65
+	printf "%c\n", "AA"
+}
